Crash in [@ malloc | mozilla::RetainedDisplayListBuilder::PreProcessDisplayList], [@ malloc | webrender_api::display_list::DisplayListBuilder::end]
Categories
(Core :: Graphics: WebRender, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr91 | --- | unaffected |
| firefox98 | --- | unaffected |
| firefox99 | --- | fixed |
| firefox100 | --- | fixed |
People
(Reporter: aryx, Assigned: mikokm)
References
(Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
dmeehan
:
approval-mozilla-beta+
|
Details | Review |
Started with Nightly 99, 14 crashes from 11 installations for Nightly 100.0a1, all with various Linux distros.
Crash report: https://crash-stats.mozilla.org/report/index/26f32a89-664b-4a74-9f1c-0fdbb0220322
MOZ_CRASH Reason: [unhandlable oom] Failed to mmap, likely no more mappings available /builds/worker/checkouts/gecko/memory/build/mozjemalloc.cpp : 1398
Top 10 frames of crashing thread:
0 firefox-bin malloc memory/build/malloc_decls.h:51
1 libxul.so webrender_api::display_list::DisplayListBuilder::end gfx/wr/webrender_api/src/display_list.rs:2179
2 libxul.so wr_api_end_builder gfx/webrender_bindings/src/bindings.rs:3878
3 libxul.so mozilla::wr::DisplayListBuilder::End gfx/webrender_bindings/WebRenderAPI.cpp:1014
4 libxul.so mozilla::layers::WebRenderLayerManager::EndTransactionWithoutLayer gfx/layers/wr/WebRenderLayerManager.cpp:446
5 libxul.so mozilla::nsDisplayList::PaintRoot layout/painting/nsDisplayList.cpp:2288
6 libxul.so nsLayoutUtils::PaintFrame layout/base/nsLayoutUtils.cpp:3446
7 libxul.so mozilla::PresShell::PaintInternal layout/base/PresShell.cpp:6362
8 libxul.so nsViewManager::ProcessPendingUpdatesPaint view/nsViewManager.cpp:440
9 libxul.so nsViewManager::ProcessPendingUpdatesForView view/nsViewManager.cpp:375
| Reporter | ||
Comment 1•3 years ago
|
||
Please include these in the triage meeting.
Comment 2•3 years ago
|
||
Miko, can you please check this? Looks like it's crashing in DisplayLists.
| Assignee | ||
Updated•3 years ago
|
| Assignee | ||
Comment 3•3 years ago
|
||
I think this is a memory leak here https://searchfox.org/mozilla-central/rev/1f617334179cf28b4b310d1d116ddbc8ef3348ea/layout/painting/nsDisplayList.h#3248.
| Assignee | ||
Comment 4•3 years ago
|
||
| Assignee | ||
Comment 5•3 years ago
|
||
Comment on attachment 9268947 [details]
Bug 1760847 - Deallocate linked list nodes when RemoveBottom() is called r=emilio
Beta/Release Uplift Approval Request
- User impact if declined: Possible OOM and crashes.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): The bug is quite obvious and the fix is simple.
- String changes made/needed:
| Reporter | ||
Updated•3 years ago
|
Comment 7•3 years ago
|
||
| bugherder | ||
Updated•3 years ago
|
Comment 8•3 years ago
|
||
Comment on attachment 9268947 [details]
Bug 1760847 - Deallocate linked list nodes when RemoveBottom() is called r=emilio
Approved for 99.0b8. Thanks.
Comment 9•3 years ago
|
||
| bugherder uplift | ||
| Reporter | ||
Updated•3 years ago
|
Updated•3 years ago
|
Description
•