Bug 1760847 - Deallocate linked list nodes when RemoveBottom() is called r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D141789